erDiagram
    users {
        UUID id PK
        VARCHAR email UK
        VARCHAR password_hash
        VARCHAR role
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    categories {
        UUID id PK
        VARCHAR name UK
        VARCHAR slug UK
        UUID parent_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    brands {
        UUID id PK
        VARCHAR name UK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    products {
        UUID id PK
        VARCHAR name
        TEXT description
        INT price
        INT stock_quantity
        UUID category_id FK
        UUID brand_id FK
        INT weight_g
        INT weight_oz "generated"
        NUMERIC dimensions_cm
        NUMERIC dimensions_inch "generated"
        TSVECTOR search_vector
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    product_images {
        UUID id PK
        UUID product_id FK
        TEXT url
        BOOLEAN is_primary
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    reviews {
        UUID id PK
        UUID user_id FK
        UUID product_id FK
        TEXT comment
        SMALLINT rating
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    refresh_tokens {
        UUID id PK
        VARCHAR token UK
        UUID user_id FK
        BOOLEAN revoked
        BOOLEAN used
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ expires_at
    }

    oauth_accounts {
        UUID id PK
        UUID user_id FK
        VARCHAR provider
        VARCHAR provider_user_id
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    password_reset_tokens {
        UUID id PK
        UUID user_id FK
        VARCHAR token UK
        BOOLEAN used
        TIMESTAMPTZ created_at
        TIMESTAMPTZ expires_at
    }

    two_factor_auth {
        UUID id PK
        UUID user_id FK
        TEXT secret_key
        BOOLEAN is_enabled
        TEXT[] recovery_codes
        TIMESTAMPTZ created_at
    }

    carts {
        UUID id PK
        UUID user_id FK "nullable, unique"
        UUID guest_session_id "nullable, unique"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    cart_items {
        UUID id PK
        UUID cart_id FK
        UUID product_id FK
        INT quantity
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    orders {
        UUID id PK
        VARCHAR order_number UK
        UUID user_id FK "nullable"
        UUID guest_session_id "nullable"
        VARCHAR status "pending_payment|paid|payment_failed|processing|shipped|delivered|cancelled|refunded"
        BYTEA email_encrypted
        BYTEA phone_encrypted "nullable"
        INT subtotal_cents
        INT shipping_cents
        INT total_cents
        VARCHAR shipping_method
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    order_items {
        UUID id PK
        UUID order_id FK
        UUID product_id FK "nullable"
        VARCHAR product_name "snapshot"
        INT unit_price_cents
        INT quantity
        TIMESTAMPTZ created_at
    }

    shipping_addresses {
        UUID id PK
        UUID order_id FK,UK
        BYTEA recipient_name_encrypted
        BYTEA line1_encrypted
        BYTEA line2_encrypted "nullable"
        BYTEA city_encrypted
        BYTEA region_encrypted
        BYTEA postal_code_encrypted
        BYTEA country_encrypted
        TIMESTAMPTZ created_at
    }

    payments {
        UUID id PK
        UUID order_id FK
        BYTEA stripe_payment_intent_id_enc
        BYTEA stripe_payment_intent_id_hmac UK
        BYTEA stripe_refund_id_enc "nullable"
        VARCHAR status "pending|succeeded|failed|cancelled|refunded"
        INT amount_cents
        VARCHAR currency
        BYTEA error_code_enc "nullable"
        BYTEA error_message_enc "nullable"
        TIMESTAMPTZ refunded_at "nullable"
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    user_activity {
        BIGSERIAL id PK
        UUID user_id FK "nullable"
        UUID guest_session_id "nullable"
        TEXT event_type "view|search|add_to_cart|purchase"
        UUID product_id FK "nullable"
        UUID category_id FK "nullable"
        TEXT search_query "nullable"
        TIMESTAMPTZ occurred_at
    }

    users ||--o{ refresh_tokens : "has"
    users ||--o{ oauth_accounts : "links"
    users ||--o{ password_reset_tokens : "requests"
    users ||--o| two_factor_auth : "configures"
    users ||--o{ reviews : "writes"

    categories ||--o{ categories : "parent of"
    categories ||--o{ products : "contains"
    brands ||--o{ products : "manufactures"

    products ||--o{ product_images : "has"
    products ||--o{ reviews : "receives"

    users ||--o| carts : "owns"
    users ||--o{ orders : "places"
    carts ||--o{ cart_items : "contains"
    products ||--o{ cart_items : "appears in"
    orders ||--o{ order_items : "lists"
    products ||--o{ order_items : "snapshotted by"
    orders ||--|| shipping_addresses : "ships to"
    orders ||--o{ payments : "settled by"
    users ||--o{ user_activity : "performs"
    products ||--o{ user_activity : "subject of"
    categories ||--o{ user_activity : "subject of"
